--- a/new.html
+++ b/new.html
@@ -33,6 +33,14 @@
   </div>
 </section>
 
+    
+<form action="upload1.php" method="POST" enctype="multipart/form-data" class="upload-form">
+    <input type="file" name="myfile" required>
+    <button type="submit">Upload</button>
+</form>
+
+
+    
    <div class="section" id="products">
    <h3>Our Collection</h3>
     <div class="products">
